@@ -1,0 +1,34 @@
+    <?xml version="1.0" encoding="utf-8"?>
+    <CIM CIMVERSION="2.0" DTDVERSION="2.0">
+    <MESSAGE ID="4711" PROTOCOLVERSION="1.0">
+      <SIMPLEREQ>
+        <IMETHODCALL NAME="CreateInstance">
+          <LOCALNAMESPACEPATH>
+            <NAMESPACE NAME="root"/>
+            <NAMESPACE NAME="interop"/>
+          </LOCALNAMESPACEPATH>
+          <IPARAMVALUE NAME="NewInstance">
+              <INSTANCE CLASSNAME="CIM_ListenerDestinationCIMXML">
+                <PROPERTY NAME="SystemCreationClassName" TYPE="string">
+                  <VALUE>CIM_ComputerSystem</VALUE>
+                </PROPERTY>
+                <PROPERTY NAME="SystemName" TYPE="string">
+                  <VALUE>localhost</VALUE>
+                </PROPERTY>
+                <PROPERTY NAME="CreationClassName" TYPE="string">
+                  <VALUE>CIM_ListenerDestination</VALUE>
+                </PROPERTY>
+                <PROPERTY NAME="Destination" TYPE="string">
+                  <VALUE>CIM_ListenerDestination</VALUE>
+                </PROPERTY>
+                <PROPERTY NAME="Name" TYPE="string">
+                  <VALUE>TestSuite_SAE_LD</VALUE>
+                </PROPERTY>
+              </INSTANCE>
+            </IPARAMVALUE>
+          </IMETHODCALL>
+        </SIMPLEREQ>
+      </MESSAGE>
+    </CIM>
+
+
