@@ -1,0 +1,2 @@
+<INSTANCENAME CLASSNAME="CIM_IndicationService">
+<PROPERTY NAME="DeliveryRetryAttempts" TYPE="uint16">
